--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/geolocation": "^6.3.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.1",
     "@capacitor/haptics": "4.1.0",
@@ -43,6 +44,7 @@
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.7.1",
     "@ionic/angular-toolkit": "^8.0.0",
+    "@ionic/cli": "^6.20.9",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
