--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "@capacitor/status-bar": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
     "@ionic/angular": "^8.0.0",
-    "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
-    "ionicons": "^7.0.0",
     "@awesome-cordova-plugins/geolocation": "^6.3.0",
+    "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
     "zone.js": "~0.14.0"
@@ -47,20 +46,19 @@
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "^6.0.0",
+    "@ionic/angular-toolkit": "^11.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "9.26.0",
+    "eslint": "^8.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0",
-    "@ionic/angular-toolkit": "^11.0.0",
-    "@ionic/cli": "^7.2.1"
+    "typescript": "~5.4.0"
   },
   "description": "An Ionic project"
 }
