--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@awesome-cordova-plugins/geolocation": "^6.3.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
-    "@capacitor/status-bar": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
-    "@awesome-cordova-plugins/geolocation": "^6.3.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
@@ -47,6 +47,7 @@
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.0",
+    "@ionic/cli": "^7.2.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
