--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ionic/cli": "^7.2.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
+    "ts-node": "~10.9.2",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.0.0",
