--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "esbuild": "^0.27.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "tar": "^7.5.7",
+    "tmp": "^0.2.5",
     "tslib": "^2.6.0",
     "zone.js": "~0.14.0"
   },
@@ -50,7 +53,6 @@
     "@ionic/cli": "^7.2.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
-    "ts-node": "~10.9.2",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.0.0",
@@ -60,6 +62,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "~10.9.2",
     "typescript": "~5.4.0"
   },
   "description": "An Ionic project"
