--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "src/assets",
