feat: update Netlify configuration for build output and simplify redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,8 @@
 [build]
-  publish = "www"
-  command = "npm install && npm run build"
+  command = "npm run build"
+  publish = "www/browser"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
